flicker ios fix

--- a/src/components/slider/styles.css
+++ b/src/components/slider/styles.css
@@ -6,3 +6,7 @@
   display: flex;
   flex-direction: row;
 }
+
+.swiper-slide {
+  -webkit-transform: translate3d(0, 0, 0);
+}
